--- a/JokeApp/build.gradle
+++ b/JokeApp/build.gradle
@@ -11,6 +11,9 @@ buildscript {
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
+    ext {
+        version_navigation = '1.0.0'
+    }
 }
 
 task clean(type: Delete) {
