--- a/JokeApp/app/src/main/AndroidManifest.xml
+++ b/JokeApp/app/src/main/AndroidManifest.xml
@@ -3,15 +3,14 @@
     package="com.example.jokeapp">
 
     <application
+        android:name=".JokeApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.JokeApp">
-        <activity
-            android:name=".AboutActivity"
-            android:exported="true" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
