--- a/JokeApp/app/build.gradle
+++ b/JokeApp/app/build.gradle
@@ -56,7 +56,7 @@ dependencies {
     implementation "android.arch.navigation:navigation-fragment-ktx:$version_navigation"
     implementation "android.arch.navigation:navigation-ui-ktx:$version_navigation"
     implementation 'com.jakewharton.timber:timber:5.0.1'
-
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 
 }
 
