--- a/JokeApp/app/build.gradle
+++ b/JokeApp/app/build.gradle
@@ -11,12 +11,12 @@ apply plugin: 'androidx.navigation.safeargs'
 
 
 android {
-    compileSdk 31
+    compileSdk 30
 
     defaultConfig {
         applicationId "com.example.jokeapp"
         minSdk 24
-        targetSdk 31
+        targetSdk 30
         versionCode 1
         versionName "1.0"
 
@@ -41,7 +41,13 @@ android {
     dataBinding{
         enabled = true
     }
+
+    testOptions.unitTests {
+        includeAndroidResources = true
+    }
 }
+
+
 
 dependencies {
 
@@ -50,9 +56,12 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.test.ext:junit-ktx:1.1.3'
     testImplementation 'junit:junit:4.+'
+    testImplementation 'org.hamcrest:hamcrest:2.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    testImplementation "org.robolectric:robolectric:4.5.1"
     implementation "android.arch.navigation:navigation-fragment-ktx:$version_navigation"
     implementation "android.arch.navigation:navigation-ui-ktx:$version_navigation"
     implementation 'com.jakewharton.timber:timber:5.0.1'
