--- a/JokeApp/app/build.gradle
+++ b/JokeApp/app/build.gradle
@@ -62,6 +62,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     testImplementation "org.robolectric:robolectric:4.5.1"
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
     implementation "android.arch.navigation:navigation-fragment-ktx:$version_navigation"
     implementation "android.arch.navigation:navigation-ui-ktx:$version_navigation"
     implementation 'com.jakewharton.timber:timber:5.0.1'
