--- a/JokeApp/app/build.gradle
+++ b/JokeApp/app/build.gradle
@@ -50,15 +50,18 @@ android {
 
 
 dependencies {
-
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.test.ext:junit-ktx:1.1.3'
+    implementation 'androidx.room:room-common:2.3.0'
+    implementation 'androidx.room:room-ktx:2.3.0'
     testImplementation 'junit:junit:4.+'
     testImplementation 'org.hamcrest:hamcrest:2.2'
+    testImplementation "androidx.room:room-testing:2.2.6"
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     testImplementation "org.robolectric:robolectric:4.5.1"
@@ -67,6 +70,7 @@ dependencies {
     implementation "android.arch.navigation:navigation-ui-ktx:$version_navigation"
     implementation 'com.jakewharton.timber:timber:5.0.1'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    kapt "androidx.room:room-compiler:2.3.0"
 
 }
 
