--- a/JokeApp/app/build.gradle
+++ b/JokeApp/app/build.gradle
@@ -22,6 +22,7 @@ android {
         multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
+        manifestPlaceholders = [auth0Domain: "dev-18w6525q.us.auth0.com", auth0Scheme: "demo"]
     }
 
     buildTypes {
@@ -59,6 +60,7 @@ dependencies {
     implementation 'androidx.test.ext:junit-ktx:1.1.3'
     implementation 'androidx.room:room-common:2.3.0'
     implementation 'androidx.room:room-ktx:2.3.0'
+    implementation 'com.auth0.android:auth0:2.+'
     testImplementation 'junit:junit:4.+'
     testImplementation 'org.hamcrest:hamcrest:2.2'
     testImplementation "androidx.room:room-testing:2.2.6"
