--- a/JokeApp/app/build.gradle
+++ b/JokeApp/app/build.gradle
@@ -61,6 +61,7 @@ dependencies {
     implementation 'androidx.room:room-common:2.3.0'
     implementation 'androidx.room:room-ktx:2.3.0'
     implementation 'com.auth0.android:auth0:2.+'
+    implementation 'androidx.security:security-crypto-ktx:1.1.0-alpha02'
     testImplementation 'junit:junit:4.+'
     testImplementation 'org.hamcrest:hamcrest:2.2'
     testImplementation "androidx.room:room-testing:2.2.6"
