--- a/JokeApp/app/build.gradle
+++ b/JokeApp/app/build.gradle
@@ -85,6 +85,19 @@ dependencies {
     implementation "androidx.activity:activity-ktx:1.3.0"
     implementation "androidx.fragment:fragment-ktx:1.3.6"
 
+    // Moshi
+    implementation "com.squareup.moshi:moshi:1.9.3"
+    implementation "com.squareup.moshi:moshi-kotlin:1.9.3"
+
+    //retrofit
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation "com.squareup.retrofit2:converter-scalars:2.9.0"
+
+    // Retrofit with Moshi Converter
+    implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
+
+    // Glide
+    implementation "com.github.bumptech.glide:glide:4.8.0"
 }
 
 check.dependsOn ktlint
