--- a/JokeApp/app/build.gradle
+++ b/JokeApp/app/build.gradle
@@ -96,6 +96,9 @@ dependencies {
     // Retrofit with Moshi Converter
     implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
 
+    //Retrofit with coroutines
+    implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2"
+
     // Glide
     implementation "com.github.bumptech.glide:glide:4.8.0"
 }
