--- a/JokeApp/app/build.gradle
+++ b/JokeApp/app/build.gradle
@@ -92,7 +92,8 @@ dependencies {
     //retrofit
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:converter-scalars:2.9.0"
-
+    //logging for retrofit with OkHttp
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.2.1'
     // Retrofit with Moshi Converter
     implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
 
