--- a/JokeApp/app/build.gradle
+++ b/JokeApp/app/build.gradle
@@ -1,7 +1,9 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
-    id 'kotlin-android-extensions'
+    // only needed if we use Parcelize features:
+    // https://developer.android.com/topic/libraries/view-binding/migration
+//    id 'kotlin-android-extensions'
 }
 
 apply from: '../ktlint.gradle'
@@ -11,12 +13,12 @@ apply plugin: 'androidx.navigation.safeargs'
 
 
 android {
-    compileSdk 30
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.example.jokeapp"
         minSdk 24
-        targetSdk 30
+        targetSdk 33
         versionCode 1
         versionName "1.0"
         multiDexEnabled true
@@ -39,41 +41,42 @@ android {
         jvmTarget = '1.8'
     }
 
-    dataBinding{
-        enabled = true
+    buildFeatures {
+        dataBinding true
     }
 
     testOptions.unitTests {
         includeAndroidResources = true
     }
+    namespace 'com.example.jokeapp'
 }
 
 
 
 dependencies {
-    implementation 'androidx.core:core-ktx:1.6.0'
-    implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
+    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation 'com.google.android.material:material:1.7.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.test.ext:junit-ktx:1.1.3'
-    implementation 'androidx.room:room-common:2.3.0'
-    implementation 'androidx.room:room-ktx:2.3.0'
-    implementation 'com.auth0.android:auth0:2.+'
-    implementation 'androidx.security:security-crypto-ktx:1.1.0-alpha02'
-    testImplementation 'junit:junit:4.+'
+    implementation 'androidx.room:room-common:2.4.3'
+    implementation 'androidx.room:room-ktx:2.4.3'
+    implementation 'com.auth0.android:auth0:2.8.0'
+    implementation 'androidx.security:security-crypto-ktx:1.1.0-alpha03'
+    testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.hamcrest:hamcrest:2.2'
-    testImplementation "androidx.room:room-testing:2.2.6"
+    testImplementation "androidx.room:room-testing:2.4.3"
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     testImplementation "org.robolectric:robolectric:4.5.1"
     testImplementation "androidx.arch.core:core-testing:2.1.0"
-    implementation "android.arch.navigation:navigation-fragment-ktx:$version_navigation"
-    implementation "android.arch.navigation:navigation-ui-ktx:$version_navigation"
+    implementation "androidx.navigation:navigation-fragment-ktx:$version_navigation"
+    implementation "androidx.navigation:navigation-ui-ktx:$version_navigation"
     implementation 'com.jakewharton.timber:timber:5.0.1'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    kapt "androidx.room:room-compiler:2.3.0"
+    kapt "androidx.room:room-compiler:2.4.3"
 
 }
 
