--- a/JokeApp/app/build.gradle
+++ b/JokeApp/app/build.gradle
@@ -11,12 +11,12 @@ apply plugin: 'androidx.navigation.safeargs'
 
 
 android {
-    compileSdk 30
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.example.jokeapp"
         minSdk 24
-        targetSdk 30
+        targetSdk 33
         versionCode 1
         versionName "1.0"
         multiDexEnabled true
@@ -46,54 +46,55 @@ android {
     testOptions.unitTests {
         includeAndroidResources = true
     }
+    namespace 'com.example.jokeapp'
 }
 
 
 
 dependencies {
-    implementation 'androidx.core:core-ktx:1.6.0'
-    implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
+    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation 'com.google.android.material:material:1.7.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.test.ext:junit-ktx:1.1.3'
-    implementation "android.arch.navigation:navigation-fragment-ktx:$version_navigation"
-    implementation "android.arch.navigation:navigation-ui-ktx:$version_navigation"
+    implementation 'androidx.test.ext:junit-ktx:1.1.4'
+    implementation "androidx.navigation:navigation-fragment-ktx:$version_navigation"
+    implementation "androidx.navigation:navigation-ui-ktx:$version_navigation"
     implementation 'com.jakewharton.timber:timber:5.0.1'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     //OAuth
     implementation 'com.auth0.android:auth0:2.+'
-    implementation 'androidx.security:security-crypto-ktx:1.1.0-alpha02'
+    implementation 'androidx.security:security-crypto-ktx:1.1.0-alpha04'
 
     testImplementation 'junit:junit:4.+'
     testImplementation 'org.hamcrest:hamcrest:2.2'
 
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.4'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
     testImplementation "org.robolectric:robolectric:4.5.1"
     testImplementation "androidx.arch.core:core-testing:2.1.0"
 
 
     //Room
-    kapt "androidx.room:room-compiler:2.3.0"
-    implementation 'androidx.room:room-common:2.3.0'
-    implementation 'androidx.room:room-ktx:2.3.0'
-    testImplementation "androidx.room:room-testing:2.2.6"
+    kapt "androidx.room:room-compiler:2.4.3"
+    implementation 'androidx.room:room-common:2.4.3'
+    implementation 'androidx.room:room-ktx:2.4.3'
+    testImplementation "androidx.room:room-testing:2.4.3"
 
     //activity delegates
-    implementation "androidx.activity:activity-ktx:1.3.0"
-    implementation "androidx.fragment:fragment-ktx:1.3.6"
+    implementation "androidx.activity:activity-ktx:1.6.1"
+    implementation "androidx.fragment:fragment-ktx:1.5.4"
 
     // Moshi
-    implementation "com.squareup.moshi:moshi:1.9.3"
-    implementation "com.squareup.moshi:moshi-kotlin:1.9.3"
+    implementation "com.squareup.moshi:moshi:1.14.0"
+    implementation "com.squareup.moshi:moshi-kotlin:1.14.0"
 
     //retrofit
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:converter-scalars:2.9.0"
     //logging for retrofit with OkHttp
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.2.1'
+    implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2'
     // Retrofit with Moshi Converter
     implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
 
@@ -101,7 +102,7 @@ dependencies {
     implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2"
 
     // Glide
-    implementation "com.github.bumptech.glide:glide:4.8.0"
+    implementation "com.github.bumptech.glide:glide:4.13.2"
 }
 
 check.dependsOn ktlint
